De laatste oefening zit er op.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.thymeleaf.prefix=/WEB-INF/templates/
+
+spring.security.user.name=Nick
+spring.security.user.password=Nicky
+spring.security.user.roles=ADULT
