Beveiliging met een databank idpv in memory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.thymeleaf.prefix=/WEB-INF/templates/
 spring.security.user.name=Nick
 spring.security.user.password=Nicky
 spring.security.user.roles=ADULT
+
+spring.datasource.url=jdbc:mariadb://noelvaes.eu/javaeewondelgemDB
+spring.datasource.username=javaeewondelgem
+spring.datasource.password=java$$wond$lg$m2019
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
